--- a/Stock-Monitor/app/src/main/res/layout/activity_main.xml
+++ b/Stock-Monitor/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:background="@android:color/black" />
+        android:background="@android:color/black"
+        android:id="@+id/rvStockList" />
 </RelativeLayout>
