--- a/Stock-Monitor/app/src/main/res/layout/stock_items.xml
+++ b/Stock-Monitor/app/src/main/res/layout/stock_items.xml
@@ -5,76 +5,90 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:id="@+id/stockItemViewContainer"
+    android:background="@android:color/black">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@android:color/black">
 
         <TextView
             android:layout_height="wrap_content"
             android:id="@+id/stockSymbol"
             android:text="@string/lbl_StockSym"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
             android:layout_width="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/horizontalDivider"
-            app:layout_constraintRight_toLeftOf="@+id/vDivider1" />
+            app:layout_constraintRight_toLeftOf="@+id/vDivider1"
+            android:background="@android:color/black" />
+        <!--app:layout_constraintBottom_toTopOf="@+id/horizontalDivider"-->
 
         <TextView
             android:id="@+id/price"
             android:text="@string/price_lbl"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+            android:layout_height="0dp"
             android:layout_width="0dp"
             app:layout_constraintLeft_toLeftOf="@+id/vDivider1"
             app:layout_constraintRight_toLeftOf="@+id/vDivider2"
-            app:layout_constraintBottom_toTopOf="@+id/horizontalDivider"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="?android:attr/findOnPagePreviousDrawable"
-            android:id="@+id/imageView"
-            app:layout_constraintRight_toLeftOf="@+id/vDivider3"
-            android:scaleType="fitCenter"
-            android:adjustViewBounds="false"
-            android:cropToPadding="true"
-            app:layout_constraintLeft_toLeftOf="@+id/vDivider2"
-            app:layout_constraintTop_toTopOf="@+id/price"
-            app:layout_constraintBottom_toBottomOf="@+id/price">
+            android:background="@android:color/black"
+            app:layout_constraintTop_toTopOf="@+id/stockSymbol"
+            app:layout_constraintBottom_toBottomOf="@+id/stockSymbol" />
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:id="@+id/stockChangeDirection"
+            app:layout_constraintLeft_toLeftOf="@+id/vDivider2"
+            app:layout_constraintRight_toLeftOf="@+id/vDivider3"
+            android:text="@string/upSolidArrow"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+            android:background="@android:color/black"
+            app:layout_constraintTop_toTopOf="@+id/price"
+            app:layout_constraintBottom_toBottomOf="@+id/price"
+            android:gravity="end"
+            android:paddingRight="5dp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:id="@+id/textPercentage"
             app:layout_constraintRight_toRightOf="parent"
             android:text="@string/percentageChange"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/horizontalDivider"
-            app:layout_constraintLeft_toLeftOf="@+id/vDivider3" />
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+            app:layout_constraintLeft_toLeftOf="@+id/vDivider3"
+            android:background="@android:color/black"
+            app:layout_constraintTop_toTopOf="@+id/stockChangeDirection"
+            app:layout_constraintBottom_toBottomOf="@+id/stockChangeDirection"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:text="@string/companyName_lbl"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:id="@+id/textView6"
-            app:layout_constraintTop_toTopOf="@+id/horizontalDivider"
+            android:layout_height="wrap_content"
+            android:id="@+id/companyName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/black"
+            app:layout_constraintTop_toBottomOf="@+id/stockSymbol"
+            android:layout_marginTop="8dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp" />
 
-        <android.support.constraint.Guideline
+        <!--<android.support.constraint.Guideline
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/horizontalDivider"
             android:orientation="horizontal"
-            tools:layout_editor_absoluteY="362dp"
+            tools:layout_editor_absoluteY="41dp"
             tools:layout_editor_absoluteX="0dp"
-            app:layout_constraintGuide_percent="0.70841485" />
+            app:layout_constraintGuide_percent="0.7" />-->
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
@@ -82,8 +96,8 @@
             android:id="@+id/vDivider1"
             android:orientation="vertical"
             tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="58dp"
-            app:layout_constraintGuide_percent="0.15" />
+            tools:layout_editor_absoluteX="96dp"
+            app:layout_constraintGuide_percent="0.25" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
@@ -91,17 +105,17 @@
             android:id="@+id/vDivider2"
             android:orientation="vertical"
             tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="115dp"
-            app:layout_constraintGuide_percent="0.3" />
+            tools:layout_editor_absoluteX="154dp"
+            app:layout_constraintGuide_percent="0.4" />
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/vDivider3"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5"
+            app:layout_constraintGuide_percent="0.55"
             tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="192dp" />
+            tools:layout_editor_absoluteX="211dp" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
