--- a/Stock-Monitor/app/src/main/res/layout/activity_main.xml
+++ b/Stock-Monitor/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,11 +11,19 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@android:color/black"
     tools:context="com.example.pavan.stock_monitor.MainActivity">
-
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:background="@android:color/black"
-        android:id="@+id/rvStockList" />
+        android:id="@+id/swipeRef">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:background="@android:color/black"
+            android:id="@+id/rvStockList"
+            android:scrollbars="vertical"
+            android:scrollbarThumbVertical="@android:color/darker_gray"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
