--- a/Stock-Monitor/app/src/main/res/layout/stock_items.xml
+++ b/Stock-Monitor/app/src/main/res/layout/stock_items.xml
@@ -50,7 +50,8 @@
             app:layout_constraintTop_toTopOf="@+id/price"
             app:layout_constraintBottom_toBottomOf="@+id/price"
             android:gravity="end"
-            android:paddingRight="5dp" />
+            android:paddingRight="5dp"
+            android:paddingLeft="5dp" />
 
         <TextView
             android:layout_width="0dp"
