--- a/Stock-Monitor/app/src/main/res/menu/main_activity_menu.xml
+++ b/Stock-Monitor/app/src/main/res/menu/main_activity_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="Add Stock"
+    <item android:title="@string/lbl_add_stock"
         android:id="@+id/menu_addStock"
         android:icon="@android:drawable/ic_menu_add"
         app:showAsAction="always"
